# brain_ct_report_generator

./: .env.example  .gitignore  FIXES_SUMMARY.md  QUICK_SETUP.sh  QUICK_START.md  README.md  RUN.md  SETUP_PIXEL_DECODING.md  SETUP_VENV.md  UPLOAD_SIZE_CONFIG.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
DICOM data /DICOM (1)/: DICOMDIR
DICOM data /DICOM (1)/DICOM/0/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  (+353 more)
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: routes.py
backend/app/models/: domain.py  schemas.py
backend/app/services/: dicom_parser.py  interfaces.py  kheops_service.py  llm_service.py  monai_service.py  report_generator.py
backend/app/utils/: dicom_utils.py  exceptions.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_routes.py
backend/tests/unit/: test_config.py  test_dicom_parser.py  test_interfaces.py  test_kheops_service.py  test_llm_service.py  test_monai_service.py  test_report_generator.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  ONBOARDING.md
frontend/: Dockerfile  requirements.txt  streamlit_app.py
frontend/utils/: api_client.py
